tools/tests/errors/random_choice_empty.ki
var random = import("random")
var r = random.Random(1)
discard r.choice([])
